# YTubic

./: README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
docs/: feature-roadmap.md  fork-feature-notes.md  release-plan.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: discord.rs  lib.rs  main.rs  media.rs  ytdlp.rs
src/components/layout/: about-dialog.tsx  app-shell.tsx  app-sidebar.tsx  cover-lightbox-dialog.tsx  entity-page-header.tsx  floating-player-app.tsx  floating-player-sync.tsx  layout-resize-handle.tsx  lyrics-view.tsx  player-bar-bottom.tsx  player-bar.tsx  player-more-menu.tsx  top-bar.tsx  whats-new-dialog.tsx  window-resize-handles.tsx
src/components/settings/: general-tab.tsx  home-tab.tsx  integrations-tab.tsx  primitives.tsx  settings-dialog.tsx  storage-tab.tsx
src/components/shared/: album-link.tsx  brand-icons.tsx  entity-header.tsx  feed-view.tsx  jump-to-current-button.tsx  like-buttons.tsx  shelf-card.tsx  shelf-carousel.tsx  skeletons.tsx  thumbnail.tsx  track-context-menu.tsx  track-list.tsx
src/components/ui/: animated-tabs.tsx  dialog.tsx  segmented.tsx  sidebar.tsx
src/lib/: audio-engine.ts  cache-cleanup.ts  cover-art.ts  format.ts  panel-resize.ts  platform.ts  playback-notifications.ts  player-drag.ts  query-client.ts  stream.ts  track-meta-fetch.ts  updater.ts  whats-new.ts
src/lib/innertube/: album.ts  artist.ts  mutations.ts  playlist.test.ts  playlist.ts  radio.ts  shared.ts  types.ts
src/lib/lastfm/: api.ts  love.ts  md5.test.ts  md5.ts  queue.ts  scrobbler.ts  track.ts
src/lib/store/: cover-lightbox.ts  discord.ts  entity-header.ts  home-sections.ts  idb-storage.ts  lastfm.ts  layout.ts  panels.ts  playback-position.ts  playback.ts  premium.ts  safe-storage.ts  settings-dialog.ts  settings.ts  track-meta.ts  track-source.ts
src/routes/: album.$id.tsx  artist.$id.tsx  browse.$id.tsx  index.tsx  library.tsx  playlist.$id.tsx  search.tsx  settings.tsx
