[package]
name = "ytubic"
version = "0.3.0"
description = "YTubic — fast, responsive YouTube Music desktop client"
authors = ["George Shyshov"]
license = "GPL-3.0-only"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ytubic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
reqwest = { version = "0.12", default-features = false, features = ["native-tls"] }
urlencoding = "2"
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "process", "sync", "net"] }
axum = "0.7"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tower = "0.5"
cookie = "0.18"
time = "0.3"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security_Cryptography",
] }

# Linux (and other non-Windows) secure cookie storage: the cookie blob is
# encrypted with AES-256-GCM and the random master key is kept in the
# platform Secret Service (libsecret / gnome-keyring / kwallet) via `keyring`.
[target.'cfg(not(windows))'.dependencies]
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"

# Linux-only: reach the underlying WebKitGTK WebView to flip settings wry
# doesn't expose (smooth scrolling). Pinned to the same version wry already
# pulls in so `PlatformWebview::inner()` hands back a matching type.
[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "=2.0.2"

[dev-dependencies]
# ServiceExt::oneshot for the stream-server routing test.
tower = { version = "0.5", features = ["util"] }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true

